--- a/sass/libs/_animations.scss
+++ b/sass/libs/_animations.scss
@@ -1,7 +1,7 @@
 /*loader*/
-.loader {
+/*.loader {
     position: absolute;
-    background-color: $grey;
+    background-color: $lighter;
     margin: auto;
     width: 100%;
     height: 100%;
@@ -29,7 +29,6 @@
     animation-fill-mode: forwards;
     animation: flash 0.8s 2 ease-out;
       @include animation;
-    
   }
   
   @keyframes flash {
@@ -69,4 +68,4 @@
     100% { 
         transform: rotate(360deg);
         opacity: 0; }
-}
+}*/
