--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,23 +1,39 @@
-@import './libs/_variables';
-@import './libs/_mixins';
-@import './libs/_placeholders';
+@import './libs/variables';
+@import './libs/placeholders';
+@import './libs/mixins';
 
-@import './libs/_animations';
-@import './libs/_mobilefirst';
+@import './libs/animations';
+@import './libs/headerfooter';
+@import './libs/accueil';
+@import './libs/components';
+@import './libs/primary-content';
+
+
 
 
 //main
+* {
+    box-sizing: border-box;
+}
 body { 
     background: $white;
-    width:100%;
+    width: 100%;
     height: 100%;
-    max-width: 480px;
+    max-width: $mobwidth;
+    margin: 4px;
     font-family: $default;
     color: $black;
-        @extend %center;
+    font-size: $txsize;
+}
+h1 p {
+    justify-content: center;
 }
 
+h4 {
+    line-height: 0%;
+}
 a {
  text-decoration:none; 
  color: $black;
 } 
+
