--- a/sass/libs/_variables.scss
+++ b/sass/libs/_variables.scss
@@ -16,10 +16,11 @@ $default: 'Roboto' !default;
 $b: bolder;
 
 //numbers
-$txsize: px;
+$txsize: 16px;
 $txtitle: 42px;
 $rad: 30px;
 $pad: 20px;
+$op : 0.7;
 
 //images 
 $shadow: 5px 5px 5px $dark;
@@ -27,6 +28,7 @@ $assetPath: '..\images\restaurants';
 $list: palette note française délice;
 
 //responsive
-$mobwidth: 480px;
+$breakpoints: (phone: 480px, tablet: 768px, desktop: 1024px);
+
 
 
