--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,14 @@
 @import './libs/variables';
 @import './libs/placeholders';
 @import './libs/mixins';
+@import './libs/mediaqueries';
 
-@import './libs/animations';
+/*@import './libs/animations';*/
 @import './libs/headerfooter';
 @import './libs/accueil';
 @import './libs/components';
 @import './libs/primary-content';
+
 
 
 
@@ -19,7 +21,6 @@ body {
     background: $white;
     width: 100%;
     height: 100%;
-    max-width: $mobwidth;
     margin: 4px;
     font-family: $default;
     color: $black;
@@ -28,12 +29,21 @@ body {
 h1 p {
     justify-content: center;
 }
-
-h4 {
-    line-height: 0%;
+h3 {
+    padding-left: $pad; 
+    padding-top: $pad;
 }
+h4 {
+    line-height: 0;
+}
+
 a {
  text-decoration:none; 
  color: $black;
-} 
+}
 
+ul li {
+    margin: 0;
+    padding: 5px;
+    font-weight: $b;
+}
