Media query page accueil

--- a/sass/libs/_mixins.scss
+++ b/sass/libs/_mixins.scss
@@ -21,9 +21,9 @@
   }
 }
 
-@mixin bgd-img($assetPath) {
+/*@mixin bgd-img($assetPath) {
   background-image: url($assetPath);
   background-size: cover;
   background-repeat: no-repeat;
   overflow: visible;
-}
+}*/
