--- a/sass/libs/_mediaqueries.scss
+++ b/sass/libs/_mediaqueries.scss
@@ -1,12 +1,73 @@
 body {
-    @include media(">phone", "<desktop") {
         width: 100%;
+        @include media('tablet','desktop') {
         display: grid;
-        grid-area: 'header section'
-                    'fonctionnement section'
-                    '.primary-content'
-                    'footer';
-                    grid-template-rows: 1fr 3fr 4fr 1fr;
-                    grid-template-columns: 4fr 4fr;
+        row-gap: 10px;
+        column-gap: 10px;
+        grid-template-areas: 'header section section'
+                    'nav introduction introduction'
+                    '. primary-content primary-content '
+                    'footer footer footer ';
+                    grid-auto-rows: 1fr auto auto 1fr;
+                    grid-template-columns: 2fr auto auto;    
+        header { 
+        margin-left: $pad;
+        width: 196px;
+        height: 34px;
+        grid-area: 'header';
+        grid-column: 1;
+        grid-row: 1;
+        }
+        section {
+        grid-area: 'section';
+        grid-column: 2;
+        grid-row: 1;
+        gap: 0;
+        }
+        nav {
+        grid-area: 'nav';
+        grid-column: 1;
+        grid-row: 2;
+        }
+        .introduction__present {
+        grid-area: 'introduction';
+        grid-column: 2;
+        grid-row: 2;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        }
+        .primary-content {
+        grid-area: 'primary-content';
+        grid-column: 2;
+        grid-row: 3; 
+        background-color: $white;
+        article {
+        display: grid;
+        align-items: stretch;
+        width: 100%;
+        }
+        }
+        footer {
+        grid-area: 'footer';
+        grid-column: 1/3;
+        grid-row: 4;
+        align-items: start;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        .fa-ul {
+            display: inline-flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            gap: 50px;
+            justify-content: end;
+        }
     }
 }
+}
+
+
