--- a/sass/libs/_primary-content.scss
+++ b/sass/libs/_primary-content.scss
@@ -1,5 +1,6 @@
 .primary-content {
     background-color: $lighter;
+    &__restaurants {@extend %inline;}
     article {
         background-color: $white;
         width: 400px;
@@ -35,4 +36,21 @@
         line-height: 0;
         margin-top: 0;
     }
+    i {
+    position: relative;
+    display: block;
+    background-color: #fff;
+    }
+}
+
+.heart {
+    transition: all 0.3s linear 0s;
+    background-color: #33BEE5;
+    width: 100%;
+    height: 0;
+    position: absolute;
+}
+ 
+.jauge:hover .jauge-remplissage {
+    height: 100%;
 }
