--- a/sass/libs/_components.scss
+++ b/sass/libs/_components.scss
@@ -8,16 +8,18 @@
         background: linear-gradient($secondary, $primary);
         color: $white;
         margin: $pad;
-        &:hover{opacity: $op;}
-        }
-        &__nav {
-            @extend %center;
-            @include bouton;
-            color: $black;
-            background-color: $lighter;
-            width: 400px;
-            height: 60px;
-            z-index: 0;
+            &:hover{
+                opacity: $op;
+                box-shadow: $bigshadow;}
+            }
+     &__nav {
+        @extend %center;
+        @include bouton;
+        color: $black;
+        background-color: $lighter;
+        width: 400px;
+        height: 60px;
+        z-index: 0;
             &:hover{opacity: $op;}
         }
     &__round {
@@ -44,12 +46,26 @@ nav i  {
     &:hover {color: $primary;}
 }
 
-.primary-content .heart {
-        position: absolute;
-        right: 30px;
-        bottom: 30px;
-        width: 32px;
-        height: 32px;
+.primary-content i {
+    left: 300px;
+    bottom: 120px;
+    background: transparent;
     }
-    
+.jauge {
+    display: block;
+    z-index: 1;
+    position: absolute;
+}
+.jauge-remplissage {
+    transition: all 0.3s linear 0s;
+    background: linear-gradient($secondary, $primary);
+    width: 100%;
+    height: 0;
+    position: absolute;
+    z-index: 0;
+    pointer-events: none;
+}
+.jauge:active .jauge-remplissage {
+    height: 100%;
+}
 
