--- a/sass/libs/_variables.scss
+++ b/sass/libs/_variables.scss
@@ -24,6 +24,7 @@ $op : 0.7;
 
 //images 
 $shadow: 5px 5px 5px $dark;
+$bigshadow: 10px 10px 5px $darker;
 $assetPath: '..\images\restaurants';
 $list: palette note française délice;
 
