--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@
 @import './libs/accueil';
 @import './libs/components';
 @import './libs/primary-content';
+@import './libs/pages';
 
 
 
@@ -26,7 +27,7 @@ body {
     color: $black;
     font-size: $txsize;
 }
-h1 p {
+h1 {
     text-align: center;
 }
 h3 {
