--- a/sass/libs/_placeholders.scss
+++ b/sass/libs/_placeholders.scss
@@ -21,4 +21,14 @@
     flex-direction: column;
 }
 
+%article {
+    margin: $pad $pad;
+    background-color: $white;
+    border-radius: $rad;
+    width: 400px;
+    border-radius: $rad;
+    box-shadow: $shadow;
+    position: relative;
+}
+
 
