--- a/sass/libs/_primary-content.scss
+++ b/sass/libs/_primary-content.scss
@@ -2,14 +2,9 @@
     background-color: $lighter;
     &__restaurants {@extend %inline;}
     article {
-        background-color: $white;
-        width: 400px;
+        @extend %article;
         height: 300px;
-        box-shadow: $shadow;
-        border-radius: $rad;
         overflow: hidden;
-        margin: 30px;
-        position: relative;
     }
     img {
         width: 100%;
@@ -36,11 +31,40 @@
         line-height: 0;
         margin-top: 0;
     }
-    i {
-    position: relative;
-    display: block;
-    background-color: #fff;
+}
+.primary-content i {
+    left: 300px;
+    bottom: 120px;
+    .fas {
+        position: absolute;
+    }
+    .far {
+        position: relative;
     }
 }
+
+/*.primary-content i {
+    left: 300px;
+    bottom: 120px;
+    background: transparent;
+    }
+.jauge {
+    display: block;
+    z-index: 1;
+    position: absolute;
+}
+.jauge-remplissage {
+    transition: all 0.3s linear 0s;
+    background: linear-gradient($secondary, $primary);
+    width: 100%;
+    height: 0;
+    position: absolute;
+    z-index: 0;
+    pointer-events: none;
+}
+.jauge:active .jauge-remplissage {
+    height: 100%;
+}*/
+
 
 
