--- a/sass/libs/_placeholders.scss
+++ b/sass/libs/_placeholders.scss
@@ -22,7 +22,7 @@
 }
 
 %article {
-    margin: $pad $pad;
+    margin: $pad;
     background-color: $white;
     border-radius: $rad;
     width: 400px;
