--- a/sass/libs/_primary-content.scss
+++ b/sass/libs/_primary-content.scss
@@ -2,7 +2,7 @@
     background-color: $lighter;
     &__restaurants {@extend %inline;}
     article {
-        @extend %article;
+            @extend %article;
         height: 300px;
         overflow: hidden;
     }
@@ -30,41 +30,15 @@
         padding: $pad 0 $pad $pad;
         line-height: 0;
         margin-top: 0;
-    }
-}
-.primary-content i {
-    left: 300px;
-    bottom: 120px;
-    .fas {
-        position: absolute;
-    }
-    .far {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         position: relative;
     }
 }
 
-/*.primary-content i {
-    left: 300px;
-    bottom: 120px;
-    background: transparent;
-    }
-.jauge {
-    display: block;
-    z-index: 1;
-    position: absolute;
-}
-.jauge-remplissage {
-    transition: all 0.3s linear 0s;
-    background: linear-gradient($secondary, $primary);
-    width: 100%;
-    height: 0;
-    position: absolute;
-    z-index: 0;
-    pointer-events: none;
-}
-.jauge:active .jauge-remplissage {
-    height: 100%;
-}*/
+
+
 
 
 
