--- a/sass/libs/_setmenu.scss
+++ b/sass/libs/_setmenu.scss
@@ -1,48 +1,66 @@
-.primary-content {background-color: $lighter;
-    &__setmenu {
-        @extend %article;
+.container {
+        @extend %column;
+        flex-wrap: wrap;
+        justify-content: center;
+}
+.content {background-color: $lighter;
+    &__setmenu { 
+            @extend %article;
         height: 100px;
+        background: $third;  
+        cursor: grab;
+        display: flex;
+        flex-wrap: wrap;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
     &__uppercase {
         text-transform: uppercase;
         font-weight: lighter;
     }
     &__price {
-        @extend %inline; 
-        margin: auto;
-        gap: 100px;
-        visibility: visible;
-        text-overflow: ellipsis;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-right: $pad;
     }
-}
-
-.animation {
     &__wrapper {
-        overflow: hidden;
+        width: 400px;
+        height: 100px;
+        border-radius: $rad;
+        background: $white; 
+        transition: all 1s linear;
+    }
+    &__wrapper:hover {
+        border-radius: $rad 0 0 $rad;
+        width: 300px;
     }
     i {
-        display: none;
+        overflow: hidden;
         opacity: 0;
+        width: 0;
+        height: 0;
+        color: $white;
+        margin: 0;
+        padding: 0;
+        bottom: 0;      
+        place-content: center;
         }
     &__wrapper:hover i {
         opacity: 1;
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
         position: absolute;
-        background: $third;
-        color: $white;
         border-radius: 0 $rad $rad 0;
-        margin: 0;
-        padding: 0;
-        bottom: 0;
         width: 100px;
         height: 100px;
-        cursor: grab;
-        text-align: center;
-        line-height: 100px;
-        animation: slideOut 2s forwards ease-in-out, roll 2s forwards ease-in-out;
-        -webkit-animation: slideOut 2s forwards ease-in-out, roll 2s forwards ease-in-out;
+        left: 100%;
+        margin-left: -100px;
+        animation: 1s 0s ease 2 alternate roll;
+        -webkit-animation: 1s 0s ease 2 alternate roll;
         }
-}
+    }  
 
 @keyframes roll {
     0% { 
@@ -66,33 +84,3 @@
         transform: rotate(360deg);
     }
 }
-   
-@keyframes slideOut {
-    0% {
-        transform: translateX(100px);
-    }
-    50% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(100px); 
-    }
-}
-@-webkit-keyframes slideOut {
-    0% {
-        transform: translateX(100px);
-    }
-    50% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(100px); 
-    }
-}
-
-
-
-
-
-
-    
