--- a/sass/libs/_animations.scss
+++ b/sass/libs/_animations.scss
@@ -1,71 +1,71 @@
-/*loader*/
-/*.loader {
-    position: absolute;
-    background-color: $lighter;
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    cursor: wait;
-    z-index: 1;
-      @extend %center;
+.loader {
+  position: absolute;
+  background-color: $lighter;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  cursor: wait;
+  z-index: 5;
+    @extend %center;
 }
 
 #hidden {
-    animation: hidden 9s ease-out forwards;
+  animation: hidden 3s ease-out forwards;
 }
 
 @keyframes hidden {
-    0%   {opacity: 1;}
-    90%  {opacity: 1;}
-    100% {visibility: hidden; opacity: 0;}
+  0%   {opacity: 1;}
+  90%  {opacity: 1;}
+  100% {visibility: hidden; opacity: 0;}
 }
 
-  .lettre {
+.lettre {
+  opacity: 0;
+  font-family: $title;
+  color: $lighter;
+  font-size: 50px;
+  letter-spacing: 5px;
+  margin-bottom: 200px;
+  animation-fill-mode: forwards;
+  animation: flash 2s 2 ease-out;
+    @include animation;
+}
+
+@keyframes flash {
+  0% {
+    color: $secondary;
+    text-shadow: 0 0 7px $secondary;
+    opacity: $op;
+  }
+  50% {
+    color: $third;
+    text-shadow: none;
+    opacity: $op;
+  }
+  100% {
+    color: $secondary;
+    text-shadow: 0 0 7px $secondary;
     opacity: 0;
-    font-family: $title;
-    font-size: 50px;
-    letter-spacing: 5px;
-    margin-bottom: 200px;
-    animation-fill-mode: forwards;
-    animation: flash 0.8s 2 ease-out;
-      @include animation;
   }
-  
-  @keyframes flash {
-    0% {
-      color: $secondary;
-      text-shadow: 0 0 7px $secondary;
-      opacity: 0.7;
-    }
-    50% {
-      color: $third;
-      text-shadow: none;
-      opacity: 0.7;
-    }
-    100% {
-      color: $secondary;
-      text-shadow: 0 0 7px $secondary;
-      opacity: 0;
-    }
-  }
+}
 
 .spinner {
-    position: absolute;
-    border: 12px solid $third; 
-    border-top: 12px solid $secondary; 
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 0.8s linear 10;
-    animation-fill-mode: forwards;
-      @extend %center;
+  position: absolute;
+  border: 12px solid $third; 
+  border-top: 12px solid $secondary; 
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear 2;
+  animation-fill-mode: forwards;
+    @extend %center;
 }
 
 @keyframes spin {
-    0% { 
-        transform: rotate(0deg);
-        opacity: 0.7; }
-    100% { 
-        transform: rotate(360deg);
-        opacity: 0; }
-}*/
+  0% { 
+      transform: rotate(0deg);
+      opacity: $op; }
+  100% { 
+      transform: rotate(360deg);
+      opacity: 0; }
+}
