--- a/sass/libs/_mixins.scss
+++ b/sass/libs/_mixins.scss
@@ -1,21 +1,22 @@
 @mixin animation {
-    @for $i from 1 through 8 {
-      &.lettre:nth-child(#{$i}) {
-        animation-delay: (#{$i+.1}s);
-    }
+  @for $i from 1 through 8 {
+    &.lettre:nth-child(#{$i}) {
+      animation-delay: (#{$i*.1}s);
   }
+}
 }
 
 @mixin bouton {
-  padding: $pad;
-  font-size: $txsize;
-  font-weight: $b;
-  border-radius: $rad;
+padding: $pad;
+font-size: $txsize;
+font-weight: $b;
+border-radius: $rad;
 }
 
-/*@mixin bgd-img($assetPath) {
-  background-image: url($assetPath);
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow: visible;
-}*/
+@mixin media($keys...){
+@each $key in $keys { 
+  @media (min-width: map-get($breakpoints, $key)){
+    @content
+  } 
+}
+}
