--- a/sass/libs/_placeholders.scss
+++ b/sass/libs/_placeholders.scss
@@ -10,16 +10,24 @@
 %inline { 
     display: inline-flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
 
 %column { 
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: column;
+}
 
+%article {
+    margin: $pad;
+    background-color: $white;
+    width: 400px;
+    border-radius: $rad;
+    box-shadow: $shadow;
+    position: relative;
 }
 
 
