--- a/sass/libs/_primary-content.scss
+++ b/sass/libs/_primary-content.scss
@@ -1,18 +1,15 @@
 .primary-content {
     background-color: $lighter;
+    &__restaurants {@extend %inline;}
     article {
-        background-color: $white;
-        width: 450px;
-        height: 350px;
-        box-shadow: $shadow;
-        border-radius: $rad;
+            @extend %article;
+        height: 300px;
         overflow: hidden;
-        margin: 0;
-        position: relative;
+        border-radius: $rad;
     }
     img {
         width: 100%;
-        height: 250px;
+        height: 200px;
         object-fit: cover;
         overflow: visible;
         margin: auto;
@@ -22,7 +19,7 @@
     &__new {
         background-color: $third;
         color: darken($third, 30%);
-        padding: 3px;
+        padding: 10px;
         text-align: right;
         position: absolute;
         font-weight: $b;
@@ -31,11 +28,17 @@
         border-radius: 3px;
     }
     &__info {
-        padding: $pad;
+        padding: $pad 0 $pad $pad;
+        line-height: 0;
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        position: relative;
     }
-    i {
+    .fa-heart {
         position: absolute;
-        right: 30px;
-        bottom: 30px;
+        top: -30;
+        left: -100;
     }
 }
