--- a/sass/libs/_variables.scss
+++ b/sass/libs/_variables.scss
@@ -16,17 +16,15 @@ $default: 'Roboto' !default;
 $b: bolder;
 
 //numbers
-$txsize: px;
+$txsize: 16px;
 $txtitle: 42px;
 $rad: 30px;
 $pad: 20px;
+$op : 0.7;
 
 //images 
 $shadow: 5px 5px 5px $dark;
-$assetPath: '..\images\restaurants';
-$list: palette note française délice;
+$bigshadow: 10px 10px 5px $darker;
 
 //responsive
-$mobwidth: 480px;
-
-
+$breakpoints: (phone: 480px, tablet: 768px, desktop: 1024px);
