--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,15 @@
 @import './libs/variables';
 @import './libs/placeholders';
 @import './libs/mixins';
+@import './libs/mediaqueries';
 
 @import './libs/animations';
 @import './libs/headerfooter';
 @import './libs/accueil';
 @import './libs/components';
 @import './libs/primary-content';
+@import './libs/titlemenu';
+@import './libs/setmenu';
 
 
 
@@ -19,21 +22,33 @@ body {
     background: $white;
     width: 100%;
     height: 100%;
-    max-width: $mobwidth;
     margin: 4px;
     font-family: $default;
     color: $black;
     font-size: $txsize;
 }
-h1 p {
-    justify-content: center;
+h1 {
+    text-align: center;
+}
+h3 {
+    padding-left: $pad; 
+    padding-top: $pad;
+}
+h4 {
+    line-height: 0;
 }
 
-h4 {
-    line-height: 0%;
-}
 a {
  text-decoration:none; 
  color: $black;
-} 
+}
 
+ul li {
+    margin: 0;
+    padding: 5px;
+    font-weight: $b;
+}
+u {
+    text-decoration: $third 2px solid underline;
+    text-underline-offset: 8px;
+}
