--- a/sass/libs/_headerfooter.scss
+++ b/sass/libs/_headerfooter.scss
@@ -8,6 +8,7 @@ header {
 }
 .welcome {
     @extend %center;
+    @include logo;
 }
 
 //footer
@@ -20,7 +21,7 @@ footer {
             color: $white;
         }
         a:hover {
-            color: $primary;
+            color: $third;
         }
         h2 { 
         font-family: $title;
