--- a/sass/libs/_mediaqueries.scss
+++ b/sass/libs/_mediaqueries.scss
@@ -1,8 +1,10 @@
+//mediaquery page accueil
+
 body {
     width: 100%;
     @include media('tablet','desktop') {
         display: grid;
-        column-gap: 10px;
+        gap: 20px;
         grid-template-areas: 'header section section'
                     'nav introduction introduction'
                     '. primary-content primary-content'
@@ -40,6 +42,7 @@ body {
             grid-column: 2;
             grid-row: 3; 
             background-color: $white;
+            margin-bottom: auto;
                 article {
                     align-items: stretch;
                     width: 100%; 
@@ -67,11 +70,13 @@ body {
     }
 }
 
+//mediaquery pages menus
+
 body {
         width: 100%;
         @include media('tablet','desktop') {
             display: grid;
-            column-gap: 10px;
+            gap: 20px;
             grid-template-areas: 'arrow . .'
                         'restaurant restaurant restaurant'
                         'menu menu menu'
@@ -106,18 +111,24 @@ body {
         .container {
             grid-area: 'menu';
             grid-row: 3;
-            grid-column: auto;
-            columns: 3 350px;
-            height: 500px;
-            display: inline-block;
-            flex-direction: row;
+            grid-column: 1/3;
+            display: flex;
             flex-wrap: wrap;
             width: 100%;
+            height: auto;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 5px;
             .content {
+                width: 33%;
+                min-width: 430px;
+            }
+            .command {
                 display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                max-width: 1200px;
+                width: 33%;
+                min-width: 430px;
+                align-self: center;
+                justify-content: center;
             }
         }
     }
