--- a/style.css
+++ b/style.css
@@ -1,680 +1,18 @@
-.bouton__nav, .bouton, .introduction__present, .introduction__search-box, .welcome, .spinner, .loader {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 25 |   background-image: url(#{$assetPath});
+ *    |                           ^^^^^^^^^^
+ *    '
+ *   sass\libs\_mixins.scss 25:27  @import
+ *   sass\style.scss 3:9           root stylesheet */
 
-main .title, .primary-content__restaurants, .pages {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 25 \2502    background-image: url(#{$assetPath});\d\a    \2502                            ^^^^^^^^^^\a    \2575 \a   sass\\libs\\_mixins.scss 25:27  @import\a   sass\\style.scss 3:9           root stylesheet";
 }
-
-.container, .introduction, footer {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-}
-
-.content__setmenu, .primary-content article {
-  margin: 20px;
-  background-color: #fff;
-  border-radius: 30px;
-  width: 400px;
-  border-radius: 30px;
-  box-shadow: 5px 5px 5px #8d8d8d;
-  position: relative;
-}
-
-body {
-  width: 100%;
-}
-@media (min-width: 768px) {
-  body {
-    display: grid;
-    column-gap: 10px;
-    grid-template-areas: "header section section" "nav introduction introduction" ". primary-content primary-content" "footer footer footer";
-    grid-auto-rows: 1fr auto auto 2fr;
-    grid-template-columns: 2fr auto auto;
-  }
-  body header {
-    margin-left: 20px;
-    width: 196px;
-    height: 34px;
-    grid-area: "header";
-    grid-column: 1;
-    grid-row: 1;
-  }
-  body section {
-    grid-area: "section";
-    grid-column: 2;
-    grid-row: 1;
-  }
-  body nav {
-    grid-area: "nav";
-    grid-column: 1;
-    grid-row: 2;
-  }
-  body .introduction__present {
-    grid-area: "introduction";
-    grid-column: 2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-  body .primary-content {
-    grid-area: "primary-content";
-    grid-column: 2;
-    grid-row: 3;
-    background-color: #fff;
-  }
-  body .primary-content article {
-    align-items: stretch;
-    width: 100%;
-  }
-  body footer {
-    grid-area: "footer";
-    grid-column: 1/3;
-    grid-row: 4;
-    align-items: start;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  body footer .fa-ul {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 50px;
-    justify-content: end;
-  }
-}
-@media (min-width: 1024px) {
-  body {
-    display: grid;
-    column-gap: 10px;
-    grid-template-areas: "header section section" "nav introduction introduction" ". primary-content primary-content" "footer footer footer";
-    grid-auto-rows: 1fr auto auto 2fr;
-    grid-template-columns: 2fr auto auto;
-  }
-  body header {
-    margin-left: 20px;
-    width: 196px;
-    height: 34px;
-    grid-area: "header";
-    grid-column: 1;
-    grid-row: 1;
-  }
-  body section {
-    grid-area: "section";
-    grid-column: 2;
-    grid-row: 1;
-  }
-  body nav {
-    grid-area: "nav";
-    grid-column: 1;
-    grid-row: 2;
-  }
-  body .introduction__present {
-    grid-area: "introduction";
-    grid-column: 2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
-  body .primary-content {
-    grid-area: "primary-content";
-    grid-column: 2;
-    grid-row: 3;
-    background-color: #fff;
-  }
-  body .primary-content article {
-    align-items: stretch;
-    width: 100%;
-  }
-  body footer {
-    grid-area: "footer";
-    grid-column: 1/3;
-    grid-row: 4;
-    align-items: start;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  body footer .fa-ul {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 50px;
-    justify-content: end;
-  }
-}
-
-body {
-  width: 100%;
-}
-@media (min-width: 768px) {
-  body {
-    display: grid;
-    column-gap: 10px;
-    grid-template-areas: "arrow . ." "img restaurant restaurant" "menu menu menu" "footer footer footer";
-    grid-auto-rows: 1fr auto auto 2fr;
-    grid-template-columns: 2fr auto auto;
-  }
-  body .pages {
-    grid-area: "arrow";
-    display: inline-flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    grid-column: 1;
-    grid-row: 1;
-  }
-  body main {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    grid-row: 2;
-    width: 100%;
-  }
-  body main img {
-    grid-area: "img";
-    grid-row: 2;
-    grid-column: 1;
-    width: 500px;
-    height: 300px;
-  }
-  body main .title {
-    grid-area: "restaurant";
-    grid-row: 2;
-    grid-column: 3;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: nowrap;
-    position: relative;
-    height: 300px;
-  }
-  body .container {
-    grid-area: "menu";
-    grid-row: 3;
-    grid-column: auto;
-    columns: 3 350px;
-    width: auto;
-    height: 500px;
-    display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  body .container .content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 1200px;
-  }
-}
-@media (min-width: 1024px) {
-  body {
-    display: grid;
-    column-gap: 10px;
-    grid-template-areas: "arrow . ." "img restaurant restaurant" "menu menu menu" "footer footer footer";
-    grid-auto-rows: 1fr auto auto 2fr;
-    grid-template-columns: 2fr auto auto;
-  }
-  body .pages {
-    grid-area: "arrow";
-    display: inline-flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    grid-column: 1;
-    grid-row: 1;
-  }
-  body main {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    grid-row: 2;
-    width: 100%;
-  }
-  body main img {
-    grid-area: "img";
-    grid-row: 2;
-    grid-column: 1;
-    width: 500px;
-    height: 300px;
-  }
-  body main .title {
-    grid-area: "restaurant";
-    grid-row: 2;
-    grid-column: 3;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: nowrap;
-    position: relative;
-    height: 300px;
-  }
-  body .container {
-    grid-area: "menu";
-    grid-row: 3;
-    grid-column: auto;
-    columns: 3 350px;
-    width: auto;
-    height: 500px;
-    display: inline-block;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  body .container .content {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 1200px;
-  }
-}
-
-.loader {
-  position: absolute;
-  background-color: #f3f3f3;
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  cursor: wait;
-  z-index: 5;
-}
-
-#hidden {
-  animation: hidden 3s ease-out forwards;
-}
-
-@keyframes hidden {
-  0% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
-.lettre {
-  opacity: 0;
-  font-family: "Shrikhand";
-  color: #f3f3f3;
-  font-size: 50px;
-  letter-spacing: 5px;
-  margin-bottom: 200px;
-  animation-fill-mode: forwards;
-  animation: flash 2s 2 ease-out;
-}
-.lettre.lettre:nth-child(1) {
-  animation-delay: 0.1s;
-}
-.lettre.lettre:nth-child(2) {
-  animation-delay: 0.2s;
-}
-.lettre.lettre:nth-child(3) {
-  animation-delay: 0.3s;
-}
-.lettre.lettre:nth-child(4) {
-  animation-delay: 0.4s;
-}
-.lettre.lettre:nth-child(5) {
-  animation-delay: 0.5s;
-}
-.lettre.lettre:nth-child(6) {
-  animation-delay: 0.6s;
-}
-.lettre.lettre:nth-child(7) {
-  animation-delay: 0.7s;
-}
-.lettre.lettre:nth-child(8) {
-  animation-delay: 0.8s;
-}
-
-@keyframes flash {
-  0% {
-    color: #ff79da;
-    text-shadow: 0 0 7px #ff79da;
-    opacity: 0.7;
-  }
-  50% {
-    color: #99E2D0;
-    text-shadow: none;
-    opacity: 0.7;
-  }
-  100% {
-    color: #ff79da;
-    text-shadow: 0 0 7px #ff79da;
-    opacity: 0;
-  }
-}
-.spinner {
-  position: absolute;
-  border: 12px solid #99E2D0;
-  border-top: 12px solid #ff79da;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 2s linear 2;
-  animation-fill-mode: forwards;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-    opacity: 0.7;
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 0;
-  }
-}
-header {
-  padding: 20px;
-}
-
-.pages {
-  column-gap: 100px;
-}
-
-footer {
-  background: #272727;
-  color: #fff;
-  padding: 20px;
-}
-footer a {
-  color: #fff;
-}
-footer a:hover {
-  color: #9356DC;
-}
-footer h2 {
-  font-family: "Shrikhand";
-  padding-left: 20px;
-}
-
-.introduction__search-box {
-  background-color: #c0c0c0;
-  color: #272727;
-  box-shadow: inset 0px 10px 10px -10px #272727;
-  justify-content: space-envenly;
-  column-gap: 20px;
-  font-weight: bolder;
-  width: auto;
-  height: 50px;
-}
-.introduction i {
-  padding-left: 30px;
-}
-.introduction input {
-  font-family: "Roboto";
-  font-size: 16px;
-  font-weight: bolder;
-  background-color: #c0c0c0;
-  outline: none;
-  border: none;
-}
-.introduction__present {
-  background-color: #f3f3f3;
-}
-
-.bouton__explore {
-  padding: 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border-radius: 30px;
-  border: none;
-  box-shadow: 5px 5px 5px #8d8d8d;
-  border: hidden;
-  background: linear-gradient(#ff79da, #9356DC);
-  color: #fff;
-  margin: 20px;
-}
-.bouton__explore:hover {
-  opacity: 0.7;
-  box-shadow: 10px 10px 5px #272727;
-}
-.bouton__nav {
-  padding: 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border-radius: 30px;
-  color: #000;
-  background-color: #f3f3f3;
-  width: 400px;
-  height: 60px;
-  z-index: 0;
-}
-.bouton__nav:hover {
-  opacity: 0.7;
-}
-.bouton__round {
-  clip-path: circle(40% at 50% 50%);
-  padding: 8px;
-  background: #9356DC;
-  color: #fff;
-  font-weight: bolder;
-  border: none;
-  position: relative;
-  bottom: -40px;
-  left: -8px;
-  z-index: 2;
-}
-
-nav i {
-  color: #8d8d8d;
-  padding-left: 95px;
-  padding-right: 20px;
-  padding-top: 20px;
-  position: absolute;
-  z-index: 3;
-}
-nav i:hover {
-  color: #9356DC;
-}
-
-.primary-content {
-  background-color: #f3f3f3;
-}
-.primary-content article {
-  height: 300px;
-  overflow: hidden;
-}
-.primary-content img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  overflow: visible;
-  margin: auto;
-  border-radius: 30px 30px 0 0;
-  padding: 0;
-}
-.primary-content__new {
-  background-color: #99E2D0;
-  color: #32b091;
-  padding: 10px;
-  text-align: right;
-  position: absolute;
-  font-weight: bolder;
-  top: 30px;
-  right: 30px;
-  border-radius: 3px;
-}
-.primary-content__info {
-  padding: 20px 0 20px 20px;
-  line-height: 0;
-  margin-top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  position: relative;
-}
-
-main {
-  position: relative;
-  margin-bottom: 0;
-}
-main img {
-  object-fit: cover;
-  object-position: 50% 50%;
-  width: 100%;
-  height: 300px;
-}
-main .title {
-  font-family: "Shrikhand";
-  position: absolute;
-  background-color: #f3f3f3;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  border-radius: 30px 30px 0 0;
-  padding: 0 20px;
-}
-
-.container {
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.content {
-  background-color: #f3f3f3;
-}
-.content__setmenu {
-  height: 100px;
-  background: #99E2D0;
-  cursor: grab;
-  display: flex;
-  flex-wrap: wrap;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.content__uppercase {
-  text-transform: uppercase;
-  font-weight: lighter;
-}
-.content__price {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-right: 20px;
-}
-.content__wrapper {
-  width: 400px;
-  height: 100px;
-  border-radius: 30px;
-  background: #fff;
-  transition: all 1s linear;
-}
-.content__wrapper:hover {
-  border-radius: 30px 0 0 30px;
-  width: 300px;
-}
-.content i {
-  overflow: hidden;
-  opacity: 0;
-  width: 0;
-  height: 0;
-  color: #fff;
-  margin: 0;
-  padding: 0;
-  bottom: 0;
-  place-content: center;
-}
-.content__wrapper:hover i {
-  opacity: 1;
-  display: flex;
-  flex-wrap: wrap;
-  position: absolute;
-  border-radius: 0 30px 30px 0;
-  width: 100px;
-  height: 100px;
-  left: 100%;
-  margin-left: -100px;
-  animation: 1s 0s ease 2 alternate roll;
-  -webkit-animation: 1s 0s ease 2 alternate roll;
-}
-
-@keyframes roll {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes roll {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: #fff;
-  width: 100%;
-  height: 100%;
-  margin: 4px;
-  font-family: "Roboto";
-  color: #000;
-  font-size: 16px;
-}
-
-h1 {
-  text-align: center;
-}
-
-h3 {
-  padding-left: 20px;
-  padding-top: 20px;
-}
-
-h4 {
-  line-height: 0;
-}
-
-a {
-  text-decoration: none;
-  color: #000;
-}
-
-ul li {
-  margin: 0;
-  padding: 5px;
-  font-weight: bolder;
-}
-
-u {
-  text-decoration: #99E2D0 2px solid underline;
-  text-underline-offset: 8px;
-}
-
-/*# sourceMappingURL=style.css.map */
