--- a/sass/libs/_animation.scss
+++ b/sass/libs/_animation.scss
@@ -3,9 +3,9 @@
 .loader {
   position: absolute;
   background-color: $lighter;
-  margin: auto;
   width: 100%;
   height: 100%;
+  max-width: 1600px;
   cursor: wait;
   z-index: 5;
     @extend %center;
