--- a/sass/libs/_mediaqueries.scss
+++ b/sass/libs/_mediaqueries.scss
@@ -3,7 +3,7 @@
 body {
     @include media('tablet','desktop') {
         display: grid;
-        gap: 20px;
+        gap: 10px;
         max-width: 1600px;
         grid-template-areas: '1 2 2'
                     '3 4 4'
@@ -75,7 +75,7 @@ body {
 body {
         @include media('tablet','desktop') {
             display: grid;
-            gap: 20px;
+            gap: 10px;
             max-width: 1600px;
             grid-template-areas: '7 . .'
                         '8 8 8'
@@ -119,6 +119,7 @@ body {
             justify-content: center;
             align-items: flex-start;
             gap: 5px;
+            background-color: $white;
             .content {
                 width: 33%;
                 min-width: 430px;
