--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,4 @@
-.bouton, .bouton__nav, .loader, .spinner, .welcome, .introduction__search-box, .introduction__present, .primary-content__restaurants, .container {
+.loader, .spinner, .welcome, .introduction__search-box, .introduction__present, .bouton, .primary-content__restaurants, .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +32,7 @@
           align-items: center;
 }
 
-footer, .introduction {
+footer, .introduction, .bouton__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,6 +47,7 @@ footer, .introduction {
 .primary-content article, .content__setmenu {
   margin: 20px;
   background-color: #fff;
+  border-radius: 30px;
   width: 400px;
   border-radius: 30px;
   -webkit-box-shadow: 5px 5px 5px #8d8d8d;
@@ -58,12 +59,9 @@ footer, .introduction {
   body {
     display: -ms-grid;
     display: grid;
-    gap: 20px;
+    gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 2 2'
- '3 4 4'
- '. 5 5'
- '6 6 6';
+        grid-template-areas: '1 2 2' '3 4 4' '. 5 5' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
     -ms-grid-columns: 2fr auto auto;
         grid-template-columns: 2fr auto auto;
@@ -186,12 +184,9 @@ footer, .introduction {
   body {
     display: -ms-grid;
     display: grid;
-    gap: 20px;
+    gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 2 2'
- '3 4 4'
- '. 5 5'
- '6 6 6';
+        grid-template-areas: '1 2 2' '3 4 4' '. 5 5' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
     -ms-grid-columns: 2fr auto auto;
         grid-template-columns: 2fr auto auto;
@@ -312,10 +307,11 @@ footer, .introduction {
 
 @media (min-width: 768px) {
   body {
-        grid-template-areas: '7 . .'
- '8 8 8'
- '9 9 9'
- '6 6 6';
+    display: -ms-grid;
+    display: grid;
+    gap: 10px;
+    max-width: 1600px;
+        grid-template-areas: '7 . .' '8 8 8' '9 9 9' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
     -ms-grid-columns: 2fr auto auto;
         grid-template-columns: 2fr auto auto;
@@ -385,6 +381,7 @@ footer, .introduction {
         -ms-flex-align: start;
             align-items: flex-start;
     gap: 5px;
+    background-color: #fff;
   }
   body .container .content {
     width: 33%;
@@ -406,10 +403,11 @@ footer, .introduction {
 
 @media (min-width: 1024px) {
   body {
-        grid-template-areas: '7 . .'
- '8 8 8'
- '9 9 9'
- '6 6 6';
+    display: -ms-grid;
+    display: grid;
+    gap: 10px;
+    max-width: 1600px;
+        grid-template-areas: '7 . .' '8 8 8' '9 9 9' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
     -ms-grid-columns: 2fr auto auto;
         grid-template-columns: 2fr auto auto;
@@ -479,6 +477,7 @@ footer, .introduction {
         -ms-flex-align: start;
             align-items: flex-start;
     gap: 5px;
+    background-color: #fff;
   }
   body .container .content {
     width: 33%;
@@ -496,100 +495,14 @@ footer, .introduction {
         -ms-flex-pack: center;
             justify-content: center;
   }
-}
-
-.bouton__explore {
-  padding: 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border-radius: 30px;
-  border: none;
-  -webkit-box-shadow: 5px 5px 5px #8d8d8d;
-          box-shadow: 5px 5px 5px #8d8d8d;
-  border: hidden;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356DC));
-  background: linear-gradient(#ff79da, #9356DC);
-  color: #fff;
-  margin: 20px;
-}
-
-.bouton__explore:hover {
-  opacity: 0.7;
-  -webkit-box-shadow: 10px 10px 5px #272727;
-          box-shadow: 10px 10px 5px #272727;
-}
-
-.bouton__nav {
-  padding: 20px;
-  font-size: 16px;
-  font-weight: bolder;
-  border-radius: 30px;
-  color: #000;
-  background-color: #f3f3f3;
-  width: 400px;
-  height: 60px;
-  z-index: 0;
-}
-
-.bouton__nav:hover {
-  opacity: 0.7;
-}
-
-.bouton__round {
-  -webkit-clip-path: circle(40% at 50% 50%);
-          clip-path: circle(40% at 50% 50%);
-  padding: 8px;
-  background: #9356DC;
-  color: #fff;
-  font-weight: bolder;
-  border: none;
-  position: relative;
-  bottom: -40px;
-  left: -8px;
-  z-index: 2;
-}
-
-.nav li i {
-  color: #8d8d8d;
-  padding-left: 95px;
-  padding-right: 20px;
-  padding-top: 20px;
-  position: absolute;
-  z-index: 3;
-}
-
-.nav li i:hover {
-  color: #9356DC;
-}
-
-.heart__checked {
-  position: absolute;
-  opacity: 0;
-  color: #9356DC;
-}
-
-.heart__checked:hover {
-  opacity: 1;
-  z-index: 10;
-  -webkit-transition: all 2s ease-in-out;
-  transition: all 2s ease-in-out;
-}
-
-.heart__unchecked {
-  position: relative;
-}
-
-.heart__unchecked:hover {
-  opacity: 0;
-  z-index: -10;
 }
 
 .loader {
   position: absolute;
   background-color: #f3f3f3;
-  margin: auto;
   width: 100%;
   height: 100%;
+  max-width: 1600px;
   cursor: wait;
   z-index: 5;
 }
@@ -773,7 +686,7 @@ footer a {
 }
 
 footer a:hover {
-  color: #99E2D0;
+  color: #9356DC;
 }
 
 footer h2 {
@@ -786,9 +699,9 @@ footer h2 {
   color: #272727;
   -webkit-box-shadow: inset 0px 10px 10px -10px #272727;
           box-shadow: inset 0px 10px 10px -10px #272727;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-envenly;
+      -ms-flex-pack: space-envenly;
+          justify-content: space-envenly;
   -webkit-column-gap: 20px;
           column-gap: 20px;
   font-weight: bolder;
@@ -811,6 +724,94 @@ footer h2 {
 
 .introduction__present {
   background-color: #f3f3f3;
+}
+
+.bouton__explore {
+  padding: 20px;
+  font-size: 16px;
+  font-weight: bolder;
+  border-radius: 30px;
+  border: none;
+  -webkit-box-shadow: 5px 5px 5px #8d8d8d;
+          box-shadow: 5px 5px 5px #8d8d8d;
+  border: hidden;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356DC));
+  background: linear-gradient(#ff79da, #9356DC);
+  color: #fff;
+  margin: 20px;
+}
+
+.bouton__explore:hover {
+  opacity: 0.7;
+  -webkit-box-shadow: 10px 10px 5px #272727;
+          box-shadow: 10px 10px 5px #272727;
+}
+
+.bouton__nav {
+  padding: 20px;
+  font-size: 16px;
+  font-weight: bolder;
+  border-radius: 30px;
+  color: #000;
+  background-color: #f3f3f3;
+  width: 350px;
+  height: 60px;
+  margin: 10px 0;
+  z-index: 0;
+}
+
+.bouton__nav:hover {
+  opacity: 0.7;
+}
+
+.bouton__round {
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  background: #9356DC;
+  color: #fff;
+  font-weight: bolder;
+  border: none;
+  position: relative;
+  left: -30px;
+  z-index: 2;
+  text-align: center;
+  line-height: 25px;
+}
+
+.nav li i {
+  color: #8d8d8d;
+  padding-left: 95px;
+  padding-right: 20px;
+  padding-top: 20px;
+  position: absolute;
+  z-index: 3;
+}
+
+.nav li i:hover {
+  color: #9356DC;
+}
+
+.heart__checked {
+  position: absolute;
+  opacity: 0;
+  color: #9356DC;
+}
+
+.heart__checked:hover {
+  opacity: 1;
+  z-index: 10;
+  -webkit-transition: all 2s ease-in-out;
+  transition: all 2s ease-in-out;
+}
+
+.heart__unchecked {
+  position: relative;
+}
+
+.heart__unchecked:hover {
+  opacity: 0;
+  z-index: -10;
 }
 
 .primary-content {
@@ -862,8 +863,6 @@ footer h2 {
 main {
   position: relative;
   margin-bottom: 0;
-  background-color: #f3f3f3;
-  width: 100%;
 }
 
 main img {
@@ -896,7 +895,7 @@ main .title {
 }
 
 .content {
-  width: 100%;
+  background-color: #f3f3f3;
 }
 
 .content__setmenu {
@@ -1051,12 +1050,11 @@ main .title {
 
 body {
   background: #fff;
-  height: 100%;
   font-family: "Roboto";
-  margin: 8px;
   color: #000;
   font-size: 16px;
-  max-width: 1600px;
+  width: 90%;
+  margin: 5%;
 }
 
 h1 {
