--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@
 @import './libs/mixins';
 @import './libs/mediaqueries';
 
-@import './libs/animations';
+@import './libs/animation';
 @import './libs/headerfooter';
 @import './libs/accueil';
 @import './libs/components';
@@ -20,20 +20,22 @@
 }
 body { 
     background: $white;
-    width: 100%;
-    height: 100%;
-    margin: 4px;
     font-family: $default;
     color: $black;
     font-size: $txsize;
+    width: 90%;
+    margin: 5%;
 }
+
 h1 {
     text-align: center;
 }
+
 h3 {
     padding-left: $pad; 
     padding-top: $pad;
 }
+
 h4 {
     line-height: 0;
 }
@@ -48,6 +50,7 @@ ul li {
     padding: 5px;
     font-weight: $b;
 }
+
 u {
     text-decoration: $third 2px solid underline;
     text-underline-offset: 8px;
