--- a/sass/libs/_headerfooter.scss
+++ b/sass/libs/_headerfooter.scss
@@ -20,7 +20,7 @@ footer {
             color: $white;
         }
         a:hover {
-            color: $primary;
+            color: $third;
         }
         h2 { 
         font-family: $title;
