Centrer Icônes fonctionnement

--- a/sass/libs/_components.scss
+++ b/sass/libs/_components.scss
@@ -46,9 +46,10 @@
     color: $dark;
     padding-left: 95px;
     padding-right: $pad;
-    padding-top: $pad;
+    /*padding-top: $pad;*/
     position: absolute;
     z-index: 3;
+    line-height: 30px;
         &:hover {color: $primary;}
 
 }
