--- a/sass/libs/_setmenu.scss
+++ b/sass/libs/_setmenu.scss
@@ -48,6 +48,10 @@
         white-space: nowrap;
         overflow: hidden;
     }
+    p:nth-child(2n) {
+        font-weight: bolder;
+        font-family: $default;
+    }
     i {
         overflow: hidden;
         opacity: 0;
@@ -70,8 +74,8 @@
         height: 100px;
         left: 100%;
         margin-left: -100px;
-        animation: 1s 0s ease 2 alternate roll;
-        -webkit-animation: 1s 0s ease 2 alternate roll;
+        animation: 2s 0.5s ease forwards roll;
+        -webkit-animation: 2s 0.5s ease forwards roll;
         }
     }  
 
