--- a/sass/style.css
+++ b/sass/style.css
@@ -1,4 +1,4 @@
-.loader, .spinner, .welcome, .introduction__search-box, .introduction__present, .bouton, .bouton__round, .primary-content__restaurants, .container {
+.loader, .spinner, .welcome, .introduction__search-box, .bouton, .bouton__round, nav ul, .primary-content__restaurants, .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,7 +49,6 @@ footer, .introduction {
   background-color: #fff;
   border-radius: 30px;
   width: 400px;
-  border-radius: 30px;
   -webkit-box-shadow: 5px 5px 5px #8d8d8d;
           box-shadow: 5px 5px 5px #8d8d8d;
   position: relative;
@@ -61,10 +60,10 @@ footer, .introduction {
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 2 2' '3 4 4' '. 5 5' '6 6 6';
+        grid-template-areas: '1 . 2' '4 4 3' '5 5 5' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
-    -ms-grid-columns: 2fr auto auto;
-        grid-template-columns: 2fr auto auto;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
   }
   body header {
     margin-left: 20px;
@@ -74,27 +73,29 @@ footer, .introduction {
     -ms-grid-column: 1;
     grid-area: 1;
     -ms-grid-column: 1;
-    grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
     -ms-grid-row: 1;
     grid-row: 1;
   }
   body .introduction {
     -ms-grid-row: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
+    -ms-grid-column: 3;
     grid-area: 2;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
     -ms-grid-row: 1;
     grid-row: 1;
   }
   body .introduction__present {
     -ms-grid-row: 2;
-    -ms-grid-column: 2;
+    -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: 4;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
     -ms-grid-row: 2;
     grid-row: 2;
     display: -webkit-box;
@@ -104,35 +105,42 @@ footer, .introduction {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   body nav {
     -ms-grid-row: 2;
-    -ms-grid-column: 1;
+    -ms-grid-column: 3;
     grid-area: 3;
-    -ms-grid-column: 1;
-    grid-column: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
     -ms-grid-row: 2;
     grid-row: 2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   body .primary-content {
     -ms-grid-row: 3;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-area: 5;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 3;
     grid-row: 3;
     background-color: #fff;
     margin-bottom: auto;
-  }
-  body .primary-content article {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    width: 100%;
   }
   body footer {
     -ms-grid-row: 4;
@@ -140,8 +148,8 @@ footer, .introduction {
     -ms-grid-column-span: 3;
     grid-area: 6;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 4;
     grid-row: 4;
     -webkit-box-align: start;
@@ -186,10 +194,10 @@ footer, .introduction {
     display: grid;
     gap: 10px;
     max-width: 1600px;
-        grid-template-areas: '1 2 2' '3 4 4' '. 5 5' '6 6 6';
+        grid-template-areas: '1 . 2' '4 4 3' '5 5 5' '6 6 6';
     grid-auto-rows: 1fr auto auto 2fr;
-    -ms-grid-columns: 2fr auto auto;
-        grid-template-columns: 2fr auto auto;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
   }
   body header {
     margin-left: 20px;
@@ -199,27 +207,29 @@ footer, .introduction {
     -ms-grid-column: 1;
     grid-area: 1;
     -ms-grid-column: 1;
-    grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
     -ms-grid-row: 1;
     grid-row: 1;
   }
   body .introduction {
     -ms-grid-row: 1;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
+    -ms-grid-column: 3;
     grid-area: 2;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
     -ms-grid-row: 1;
     grid-row: 1;
   }
   body .introduction__present {
     -ms-grid-row: 2;
-    -ms-grid-column: 2;
+    -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: 4;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
     -ms-grid-row: 2;
     grid-row: 2;
     display: -webkit-box;
@@ -229,35 +239,42 @@ footer, .introduction {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   body nav {
     -ms-grid-row: 2;
-    -ms-grid-column: 1;
+    -ms-grid-column: 3;
     grid-area: 3;
-    -ms-grid-column: 1;
-    grid-column: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
     -ms-grid-row: 2;
     grid-row: 2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   body .primary-content {
     -ms-grid-row: 3;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-area: 5;
-    -ms-grid-column: 2;
-    grid-column: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 3;
     grid-row: 3;
     background-color: #fff;
     margin-bottom: auto;
-  }
-  body .primary-content article {
-    -webkit-box-align: stretch;
-        -ms-flex-align: stretch;
-            align-items: stretch;
-    width: 100%;
   }
   body footer {
     -ms-grid-row: 4;
@@ -265,8 +282,8 @@ footer, .introduction {
     -ms-grid-column-span: 3;
     grid-area: 6;
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
     -ms-grid-row: 4;
     grid-row: 4;
     -webkit-box-align: start;
@@ -313,8 +330,8 @@ footer, .introduction {
     max-width: 1600px;
         grid-template-areas: '7 . .' '8 8 8' '9 9 9';
     grid-auto-rows: 1fr auto auto 2fr;
-    -ms-grid-columns: 2fr auto auto;
-        grid-template-columns: 2fr auto auto;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
   }
   body .pages {
     -ms-grid-row: 1;
@@ -409,8 +426,8 @@ footer, .introduction {
     max-width: 1600px;
         grid-template-areas: '7 . .' '8 8 8' '9 9 9';
     grid-auto-rows: 1fr auto auto 2fr;
-    -ms-grid-columns: 2fr auto auto;
-        grid-template-columns: 2fr auto auto;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
   }
   body .pages {
     -ms-grid-row: 1;
@@ -701,9 +718,6 @@ footer h2 {
   color: #272727;
   -webkit-box-shadow: inset 0px 10px 10px -10px #272727;
           box-shadow: inset 0px 10px 10px -10px #272727;
-  -webkit-box-pack: space-envenly;
-      -ms-flex-pack: space-envenly;
-          justify-content: space-envenly;
   -webkit-column-gap: 20px;
           column-gap: 20px;
   font-weight: bolder;
@@ -725,6 +739,7 @@ footer h2 {
 }
 
 .introduction__present {
+  text-align: center;
   background-color: #f3f3f3;
 }
 
@@ -954,6 +969,11 @@ main .title {
   overflow: hidden;
 }
 
+.content p:nth-child(2n) {
+  font-weight: bolder;
+  font-family: "Roboto";
+}
+
 .content i {
   overflow: hidden;
   opacity: 0;
@@ -980,8 +1000,8 @@ main .title {
   height: 100px;
   left: 100%;
   margin-left: -100px;
-  animation: 1s 0s ease 2 alternate roll;
-  -webkit-animation: 1s 0s ease 2 alternate roll;
+  animation: 2s 0.5s ease forwards roll;
+  -webkit-animation: 2s 0.5s ease forwards roll;
 }
 
 @keyframes roll {
@@ -1078,7 +1098,6 @@ a {
 ul li {
   margin: 0;
   font-weight: bolder;
-  padding-left: 5px;
 }
 
 u {
